# land-cover-segmentation

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
land_cover/: __init__.py
land_cover/data_utils/: __init__.py  augmentations.py  datamodule.py  dataset.py  download_utils.py  file_utils.py  misc.py
tests/land_cover/data_utils/: test_augmentations.py  test_datamodule.py  test_dataset.py  test_download_utils.py  test_file_utils.py
