[metadata]
name = land_cover
version = 0.0.1
author = Tristan Dardoize
author_email = tristan.dardoize@gmail.com
description = ENS Challenge
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
# #python_requires = '>=3.8'

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests

