[metadata]
name = land_cover
version = 0.0.1
author = Tristan Dardoize
author_email = tristan.dardoize@gmail.com
description = ENS Challenge
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
# #python_requires = '>=3.8'

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
;    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests


